# mlx

./: .gitignore  CMakeLists.txt  ROCM_OPT_GEMINI.md  ROCM_QMV_BACKEND_COMPARISON.md  benchmark_llm_rocm.py  test.sh  test_qwen3_generation.py
benchmarks/python/: qwen3_quantized_generate_bench.py
mlx/: CMakeLists.txt  device.cpp  fast.cpp  ops.cpp
mlx/backend/rocm/: CMakeLists.txt  allocator.cpp  allocator.h  arange.hip.cpp  arg_reduce.hip  arg_reduce.hip.cpp  bin2h.cmake  binary_two.hip.cpp  compiled.cpp  conv.cpp  copy.hip.cpp  cublas_utils.h  cudnn_utils.cpp  cudnn_utils.h  custom_kernel.cpp  delayload.cpp  device.cpp  device.h  device_info.cpp  distributed.hip.cpp  eval.cpp  event.h  event.hip  event.hip.cpp  fence.cpp  fft.hip.cpp  flash_attention.hip  flash_attention_wmma.hip  hadamard.hip.cpp  hip_utils.h  hipblas_utils.cpp  hipblas_utils.h  indexing.cpp  indexing.hip  jit_module.cpp  jit_module.h  kernel_utils.hip.cpp  kernel_utils.hip.h  layer_norm.hip  layer_norm.hip.cpp  (+29 more)
mlx/backend/rocm/binary/: CMakeLists.txt  add.hip.cpp  arctan2.hip.cpp  binary.hip.h  bitwise_binary.hip.cpp  divide.hip.cpp  equal.hip.cpp  greater.hip.cpp  greater_equal.hip.cpp  less.hip.cpp  less_equal.hip.cpp  log_add_exp.hip.cpp  logical_and.hip.cpp  logical_or.hip.cpp  maximum.hip.cpp  minimum.hip.cpp  multiply.hip.cpp  not_equal.hip.cpp  power.hip.cpp  remainder.hip.cpp  subtract.hip.cpp
mlx/backend/rocm/conv/: conv.h  gemm_conv.hip  gemm_conv.hip.cpp  gemm_grouped_conv.hip.cpp
mlx/backend/rocm/copy/: copy.hip.h  copy_contiguous.hip.cpp  copy_general.hip  copy_general.hip.cpp  copy_general_dynamic.hip.cpp  copy_general_input.hip  copy_general_input.hip.cpp
mlx/backend/rocm/device/: atomic_ops.hip.h  binary_ops.hip.h  cast_op.hip.h  complex.hip.h  config.h  fp16_math.hip.h  gather.hip.h  gather_axis.hip.h  hadamard.hip.h  indexing.hip.h  scatter.hip.h  scatter_axis.hip.h  scatter_ops.hip.h  slice_update.hip.h  unary_ops.hip.h  unary_ops.hip.h.patch  utils.hip.h
mlx/backend/rocm/gemms/: block_mask.h  block_mask.hip.cpp  cublas_gemm.cpp  cublas_gemm.h  cublas_gemm_batched_12_0.cpp  cublas_gemm_batched_12_9.hip.cpp  gemv.h  gemv.hip  gemv.hip.cpp  grouped_gemm_unaligned.hip.cpp  hipblaslt_gemm.cpp  hipblaslt_gemm.h  naive_gemm.hip  rocblas_gemm.cpp
mlx/backend/rocm/quantized/: affine_quantize.hip  affine_quantize.hip.cpp  convert_fp8.hip.cpp  cublas_qqmm.cpp  cublas_qqmm.h  fp_quantize.hip  fp_quantize.hip.cpp  mxfp8_quantize.hip.h  no_qqmm_impl.cpp  nvfp4_quantize.hip.h  qdequant.hpp  qmm.hip  qmv_kernel.hip  qmv_tiled_kernel.hip  qqmm.cpp  qqmm_impl.cpp  qqmm_impl.h  qqmm_utils.h  qqmm_utils.hip.cpp  quantized.cpp  quantized.h  quantized_utils.h
mlx/backend/rocm/quantized/qmm/: CMakeLists.txt  cute_dequant.hip.h  fp_qmv.hip.cpp  qmm.h  qmm.hip.cpp  qmm_impl_naive.hip.h  qmm_impl_naive_m16_k.hip.cpp  qmm_impl_naive_m16_n.hip.cpp  qmm_impl_naive_m32_k.hip.cpp  qmm_impl_naive_m32_n.hip.cpp  qmm_impl_naive_m64_k.hip.cpp  qmm_impl_naive_m64_n.hip.cpp  qmm_impl_sm80.hip.h  qmm_impl_sm80_m16.hip.cpp  qmm_impl_sm80_m32.hip.cpp  qmm_impl_sm80_m64.hip.cpp  qmm_impl_sm90.hip.h  qmm_impl_sm90_m128_n128_m2.hip.cpp  qmm_impl_sm90_m128_n16_m1.hip.cpp  qmm_impl_sm90_m128_n256_m2.hip.cpp  qmm_impl_sm90_m128_n32_m1.hip.cpp  qmm_impl_sm90_m128_n64_m2.hip.cpp  qmv.hip.cpp
mlx/backend/rocm/reduce/: all_reduce.hip.cpp  col_reduce.hip.cpp  init_reduce.hip.cpp  reduce.hip.h  reduce_ops.hip.h  reduce_utils.hip.h  row_reduce.hip.cpp
mlx/backend/rocm/steel/: gemm.hip.h  mma.hip.h  tiles.hip.h  utils.hip.h
mlx/backend/rocm/unary/: CMakeLists.txt  abs.hip.cpp  arccos.hip.cpp  arccosh.hip.cpp  arcsin.hip.cpp  arcsinh.hip.cpp  arctan.hip.cpp  arctanh.hip.cpp  bitwise_invert.hip.cpp  ceil.hip.cpp  conjugate.hip.cpp  cos.hip.cpp  cosh.hip.cpp  erf.hip.cpp  erf_inv.hip.cpp  exp.hip.cpp  expm1.hip.cpp  floor.hip.cpp  imag.hip.cpp  log.hip.cpp  log1p.hip.cpp  logical_not.hip.cpp  negative.hip.cpp  real.hip.cpp  round.hip.cpp  sigmoid.hip.cpp  sign.hip.cpp  sin.hip.cpp  sinh.hip.cpp  sqrt.hip.cpp  square.hip.cpp  tan.hip.cpp  tanh.hip.cpp  unary.hip.h
python/tests/: mlx_tests.py  test_blas.py  test_fast_sdpa.py
